# northnarrow-new

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICES.md  README.md  ROADMAP.md  VISION.md  VISION_TECHNICAL.md
.cargo/: config.toml
.github/workflows/: ci.yml
agent/: Cargo.toml  build.rs
agent-ebpf/: Cargo.toml  rust-toolchain.toml
agent-ebpf/.cargo/: config.toml  config.toml.bak2
agent-ebpf/src/: btf_offsets.rs  dns_query.rs  exec_check.rs  file_open.rs  fim_watch.rs  inet_csk_listen.rs  inode_protect.rs  main.rs  ptrace_check.rs  task_kill.rs  tcp_close.rs  tcp_connect.rs  udp_sendmsg_outbound.rs
agent/examples/: ade_attacks.rs  ade_demo.rs  ade_smoke.rs  ade_with_rag.rs  bench_threads.rs  diag_hw.rs  posture_demo.rs  rag_demo.rs
agent/src/: admin_cli.rs  admin_socket.rs  agent_id.rs  anti_tamper.rs  audit.rs  chainlog.rs  lib.rs  main.rs  sd_notify.rs  shutdown_marker.rs
agent/src/ade/: backend_candle.rs  chain_template.rs  config.rs  context.rs  dual_verify.rs  error.rs  escalate.rs  fim_template.rs  inference.rs  mem_guard.rs  mod.rs  parser.rs  process_template.rs  prompt.rs  rag_integration.rs  sanitize.rs  sanity_check.rs  stats.rs  streaming_parser.rs  structured_prompt.rs  tests.rs
agent/src/anti_tamper/: admin_auth.rs  bootstrap.rs  combat_allow.rs  filesystem.rs  mod.rs  network_isolate.rs
agent/src/canary/: access_log.rs  detector.rs  mod.rs  registry.rs  templates.rs
agent/src/config/: comm_allowlist.rs  mod.rs  overlay.rs
agent/src/correlation/: mod.rs
agent/src/decision/: engine.rs  mod.rs  tests.rs
agent/src/decision/correlation/: ancestry.rs  mod.rs  store.rs
agent/src/decision/rules/: canary.rs  chain.rs  mod.rs  net.rs  r001_exec_from_tmp.rs  r002_exec_from_dev_shm.rs  r003_exec_from_var_tmp.rs  r004_exec_from_proc_self_fd.rs  r005_netcat_exec.rs  r006_reverse_shell_tooling.rs  r007_crypto_miner.rs  r008_hidden_home_binary.rs  r009_root_exec_from_user_path.rs  r010_binary_in_webroot.rs  r011_kernel_module_tooling.rs  r012_setcap_tooling.rs  r013_namespace_escape_tooling.rs  r014_at_batch_scheduling.rs  r015_encoding_tooling_service_uid.rs  r016_debugger_service_uid.rs  r017_shell_from_nonstandard_path.rs  test_actions.rs
agent/src/fim/: attach.rs  baseline.rs  drain.rs  honeypot.rs  mod.rs  paths_config.rs  recompute.rs  rules.rs
agent/src/net/: blocklist.rs  dns_cache.rs  drain.rs  flow_tracker.rs  mod.rs  tls_parser.rs
agent/src/posture/: exempt.rs  lineage.rs  mass_write_overlay.rs  mod.rs  modulation.rs  state.rs  tests.rs  transitions.rs  triggers.rs
agent/src/rag/: bench.rs  canary.rs  embedder.rs  index_tantivy.rs  kb_seed.rs  mod.rs  retrieval.rs  store.rs  tests.rs
agent/src/response/: block_outbound.rs  config.rs  executor.rs  kill.rs  mod.rs  network_isolation.rs  quarantine.rs  tests.rs  throttle.rs
agent/src/sensors/: ebpf_object.rs  exec.rs  mod.rs  multiplexer.rs
agent/src/xai/: engine.rs  evidence.rs  mod.rs  occlusion.rs  saliency.rs  source.rs
agent/tests/: canary_privileged_e2e.rs  detection_rules_at_scale_privileged_e2e.rs  exec_sensor_live.rs  fim_privileged_e2e.rs  honeypot_tamper_e2e.rs  net_privileged_e2e.rs  privileged_e2e.rs  privileged_map_pin.rs
agent/tests/common/: mod.rs
antitamper-bpf/: Cargo.toml
antitamper-bpf/src/: lib.rs
cli/: Cargo.toml
cli/src/: main.rs
common/: Cargo.toml
common/src/: ade_types.rs  lib.rs  model.rs  posture_types.rs  rag_types.rs  wire.rs  xai_types.rs
common/src/wire/: admin_protocol.rs  admin_signed_payload.rs  mod.rs
configs/: combat-allow.cidrs  combat-rules.v4  fim-paths.v1  netflow-blocklist.v1  netflow-comm-allowlist.v1  netflow-ja3-blocklist.v1  process-comm-allowlist.local.example  process-comm-allowlist.v1
configs/canary-templates/: aws.tmpl  azure.tmpl  docker.tmpl  gcp.tmpl  generic.tmpl
configs/honeypot-baits/: agent.legacy.conf  debug_disable.flag  disable.token  kill_switch.conf  maintenance.mode  override.config  pause.flag  shutdown.signal  unload.signal
dataset/: system_prompt_minimal.md  system_prompt_tiny.md  system_prompt_v1.md
deploy/: install.sh
deploy/systemd/: journald@northnarrow.conf  northnarrow-agent.service  northnarrow-watchdog.service
docs/: ADE_BACKEND_NOTES.md  ADE_DOCTRINE.md  CLAUDE_BRIEFING.md  IDEAS_2026-05-12.md  PERFORMANCE.md  PERFORMANCE_HARDWARE.md  PERFORMANCE_THREADS.md  TAPPA6_9_7_RAG_KB_PLAN.md  TAPPA6_9_ARTICLE_13_COMPLIANCE.md  TAPPA6_9_XAI_PLAN.md  TAPPA7_PREREQ.md  TAPPA7_TASK5_DEEP_DEBUG.md  XDR_ROADMAP_TAPPE_NEW.md  integration-test-runbook.md  verify-2b.sh
docs/adversarial/: README.md  V2_ATOMIC_RED_TEAM_SWEEP.md
docs/adversarial/scripts/: 00_config.sh  01_provision_kalidev.sh  02_configure_network.sh  03_provision_target_prod_mode.sh  04_install_attack_toolkit.sh  05_verify_isolation.sh  06_baseline_snapshot.sh  07_teardown.sh
docs/backlog/: BUG_CATALOG_DESIGN.md
docs/debug/: iter2_test_block.sh
docs/design/: ANTITAMPER_TRUST_MODEL.md  EBPF_OBJECT_STALENESS_GUARD_DESIGN.md  POSTURE_FSM_V2_REDESIGN.md  TAPPA10_5_DETECTION_RULES_AT_SCALE_DESIGN.md  TAPPA10_6_DETECTION_DEPTH_REFIT_DESIGN.md  TAPPA10_7_ADVERSARIAL_VALIDATION_DESIGN.md  TAPPA10_NETWORK_OBSERVABILITY_DESIGN.md  TAPPA7_TASK6_WATCHDOG_DESIGN.md  TAPPA8_ED25519_ADMIN_OVERRIDE_DESIGN.md  TAPPA9_5_1_ANTITAMPER_HONEYPOT_DESIGN.md  TAPPA9_5_DECEPTION_LAYER_DESIGN.md  TAPPA9_FIM_DESIGN.md
docs/follow-ups/: EBPF_001_btf_core_offset_resolution.md  PHASE_D_001_protected_pids_pin_by_name.md  PHASE_D_002_ptrace_check_caller_exemption.md  PHASE_D_003_tappa8_privileged_e2e.md
docs/issues/: ISSUE_001_eni_test_r009_selfkill.md  ISSUE_002_antitamper_bpf_crate_extraction.md
docs/kb-sources/: kb_index.json
docs/kb-sources/sigma-hq-rules/: provenance.json
docs/operator/: COMBAT_RECOVERY.md  CONTAINER_HOST_DEPLOY.md  TAPPA9_FIM_TRUST_MODEL.md  anti-tamper-honeypots.md
docs/strategy/: ADE_ACTIVE_DEFENDER_VISION.md
ebpf-guard/: Cargo.toml
ebpf-guard/src/: lib.rs
watchdog/: Cargo.toml
watchdog/src/: lib.rs  main.rs
watchdog/tests/: privileged_e2e.rs
xtask/: Cargo.toml
xtask/src/: main.rs  rag_kb.rs
(+6 files in other folders)
