[workspace]
resolver = "2"
members = ["agent", "common", "cli", "xtask"]
# `agent-ebpf` is a separate cargo project: nightly toolchain,
# bpfel-unknown-none target, build-std=core. The xtask runner builds it.
exclude = ["agent-ebpf"]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.83"
license = "Apache-2.0"
repository = "https://github.com/northnarrow/northnarrow-new"
authors = ["NorthNarrow"]

[workspace.dependencies]
common = { package = "northnarrow-common", path = "common" }

tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
bytemuck = { version = "1", features = ["derive"] }

# eBPF userland
aya = "0.13"
aya-log = "0.2"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
