[workspace]
resolver = "2"
members = ["agent", "antitamper-bpf", "common", "cli", "watchdog", "xtask"]
# `agent-ebpf` is a separate cargo project: nightly toolchain,
# bpfel-unknown-none target, build-std=core. The xtask runner builds it.
exclude = ["agent-ebpf"]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.83"
license = "Apache-2.0"
repository = "https://github.com/northnarrow/northnarrow-new"
authors = ["NorthNarrow"]

[workspace.dependencies]
common = { package = "northnarrow-common", path = "common" }
antitamper-bpf = { package = "northnarrow-antitamper-bpf", path = "antitamper-bpf" }

tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
bytemuck = { version = "1", features = ["derive"] }

# eBPF userland
aya = "0.13"
aya-log = "0.2"

[profile.release]
# Sub-tappa 6.8 (performance pass) bumps LTO from "thin" to "fat":
# cross-crate inlining lets candle's hot quantized matmul be folded
# into the engine's spawn_blocking caller, gaining ~10-20% on CPU
# decode on AVX2 hosts. The trade-off is build time: ~30s → ~90-120s
# on the Hetzner CCX23 reference host. Acceptable because production
# builds are infrequent and CI runs `--release` only on the final
# job. Fall back to `lto = "thin"` if a host lacks the RAM (LTO fat
# can peak ~6-8 GiB during link).
opt-level = 3
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"

# Same as `release` but keeps debug symbols so `perf record` / flame
# graphs can name candle internals when bench_threads runs against
# the real Foundation-Sec model. Built explicitly with
# `cargo build --profile release-bench`.
[profile.release-bench]
inherits = "release"
debug = true
strip = "none"
