[package]
name = "northnarrow-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "NorthNarrow agent daemon (Linux-first, 100% Rust XDR sensor + responder)."

[[bin]]
name = "northnarrow-agent"
path = "src/main.rs"

[lib]
name = "northnarrow_agent"
path = "src/lib.rs"

[features]
default = []
# Enables R901..=R904, four hardcoded demo rules whose only job is to
# trigger each of the new Tappa 5 actions (BlockOutbound,
# FullNetworkIsolation, Quarantine, ThrottleProcess) by filename
# suffix. NEVER enable in production builds.
demo-tappa5 = []

[dependencies]
common = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
bytemuck = { workspace = true }
aya = { workspace = true }
aya-log = { workspace = true }
libc = "0.2"
nix = { version = "0.29", features = ["signal", "process"] }
procfs = { version = "0.17", default-features = false }

# Tappa 5: response executors
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
zeroize = { version = "1.8", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
serde_json = "1"

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
