[package]
name = "northnarrow-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "NorthNarrow agent daemon (Linux-first, 100% Rust XDR sensor + responder)."

[[bin]]
name = "northnarrow-agent"
path = "src/main.rs"

[[bin]]
name = "nn-admin"
path = "src/bin/nn_admin.rs"

[lib]
name = "northnarrow_agent"
path = "src/lib.rs"

[features]
default = []
# Enables R901..=R904, four hardcoded demo rules whose only job is to
# trigger each of the new Tappa 5 actions (BlockOutbound,
# FullNetworkIsolation, Quarantine, ThrottleProcess) by filename
# suffix. NEVER enable in production builds.
demo-tappa5 = []
# Exposes the nn-admin `debug --force-posture <STATE>` subcommand and
# the agent-side handler that consumes it. Used by the integration
# test harness; never enabled in production builds.
debug-trigger = ["common/debug-trigger"]
# Gates `agent/tests/privileged_e2e.rs` — full end-to-end scenarios
# that spawn the agent + nn-admin subprocesses and verify the
# iptables ruleset against a live kernel. Requires root and a
# working iptables binary; CI compiles but does not execute these.
# See docs/integration-test-runbook.md for the manual run path.
test-privileged = []

[dependencies]
common = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
bytemuck = { workspace = true }
aya = { workspace = true }
aya-log = { workspace = true }
libc = "0.2"
nix = { version = "0.29", features = ["signal", "process"] }
procfs = { version = "0.17", default-features = false }

# Tappa 5: response executors
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
zeroize = { version = "1.8", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde_json = "1"

# Tappa 6: ADE
chrono = { version = "0.4", default-features = false, features = ["serde", "std", "clock"] }
clap = { workspace = true }
parking_lot = "0.12"

# Sub-tappa 6.8: physical-core auto-detection for AdeConfig.effective_threads.
# Already a transitive dep of tokio/rayon; declaring it here pins the API.
num_cpus = "1.16"

# Sub-tappa 6.1: real LLM inference backend (candle, Llama 3.1 GGUF).
# CPU-only by default; CUDA/Metal can be enabled via candle features
# behind an `ade-gpu` flag in a follow-up sub-tappa.
candle-core = { version = "0.10", default-features = false }
candle-transformers = { version = "0.10", default-features = false }
candle-nn = { version = "0.10", default-features = false }
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }

# Sub-tappa 6.6: ADE prompt-injection hardening (base64 encoding of
# untrusted strings inside the structured prompt).
base64 = "0.22"

# Tappa 7 task 7 / Tappa 8: nn-admin Ed25519 challenge-response.
# `std` keeps the regular SignatureError type (no_std mode pares it
# down); `rand_core` lets us feed rand 0.8's OsRng into key generation.
ed25519-dalek = { version = "2", default-features = false, features = ["std", "rand_core"] }
hex = "0.4"
# <<<VERBATIM — Owner ruling §12.1, 2026-05-17>>>
# Tappa 6.9.7: tantivy is pinned exact-version to ensure deterministic
# BM25 scoring across rebuilds. A version bump invalidates the golden
# retrieval test suite and the KB index format compatibility, so it is
# a deliberate commit with golden-test refresh and KB rebuild, never a
# silent cargo update. Bump-if-verified path: 0.26.0 may be adopted if
# `cargo search tantivy` confirms GA (not RC) AND no breaking BM25
# scoring changes vs 0.25.x are noted in the changelog.
# <<<END VERBATIM>>>
# CHARTER NOTE (P3, 2026-05-17): default-features=false is MANDATORY —
# tantivy's default `columnar-zstd-compression` pulls `zstd-sys` (C FFI),
# which violates the 100%-Rust/no-FFI charter. The pure-Rust set below
# (mmap = memmap2 on-disk index; lz4-compression = lz4_flex store) keeps
# zstd-sys out of the tree (verified via `cargo tree`). Do NOT re-enable
# default features or add `zstd-compression`/`columnar-zstd-compression`.
# `stopwords` dropped in P4 (audit F-P3-2): the nn_sec analyzer does not
# use a stop-word filter — verified the full rag suite green without it
# (minimal surface). 0.26.1 is GA as of P3 but a bump stays deliberate
# (see verbatim above).
tantivy = { version = "=0.25.0", default-features = false, features = ["mmap", "lz4-compression"] }

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
