[package]
name = "northnarrow-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Shared types for the NorthNarrow XDR (events, verdicts, response actions, kernel↔userland wire types)."

[lib]
name = "northnarrow_common"
path = "src/lib.rs"

[features]
default = ["std"]
# `std` enables the userland-rich types (Event, Verdict, ResponseAction)
# and bytemuck Pod derives. Disable it from the eBPF crate, which only
# needs the raw wire types.
std = ["dep:serde", "dep:bytemuck", "dep:postcard", "dep:serde-big-array"]
# Opt-in for the nn-admin debug surface (DebugForcePosture variant in
# the admin protocol). Off by default; production builds never see it.
# The agent crate forwards its own `debug-trigger` feature here.
debug-trigger = []

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
bytemuck = { version = "1", default-features = false, features = ["derive", "min_const_generics"], optional = true }
postcard = { version = "1", default-features = false, features = ["alloc"], optional = true }
# Serde's auto-derive supports `[T; N]` only up to N=32 in stable;
# UnlockRequest carries an Ed25519 sig as `[u8; 64]`. serde-big-array
# unblocks the larger sizes without us hand-rolling Deserialize.
serde-big-array = { version = "0.5", optional = true }

[dev-dependencies]
serde_json = "1"
# Test-only: the canonical_bytes byte-lock regression anchor
# (xai_types). NOT a runtime dep — the dependency-light charter governs
# the shipped eBPF/CLI/C2 surface, not `cargo test`. Pinned to the same
# 0.10 the agent already uses for environment_hash at runtime.
sha2 = "0.10"
