[package]
name = "northnarrow-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Shared types for the NorthNarrow XDR (events, verdicts, response actions, kernel↔userland wire types)."

[lib]
name = "northnarrow_common"
path = "src/lib.rs"

[features]
default = ["std"]
# `std` enables the userland-rich types (Event, Verdict, ResponseAction)
# and bytemuck Pod derives. Disable it from the eBPF crate, which only
# needs the raw wire types.
std = [
    "dep:serde",
    "dep:bytemuck",
    "dep:postcard",
    "dep:serde-big-array",
    # Tappa 8 commit A2 (admin_signed_payload): CBOR + SHA-512 + Ed25519
    # verify. Std-gated so the eBPF half stays free of these deps.
    "dep:ciborium",
    "dep:sha2",
    "dep:ed25519-dalek",
]
# Opt-in for the nn-admin debug surface (DebugForcePosture variant in
# the admin protocol). Off by default; production builds never see it.
# The agent crate forwards its own `debug-trigger` feature here.
debug-trigger = []

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
bytemuck = { version = "1", default-features = false, features = ["derive", "min_const_generics"], optional = true }
postcard = { version = "1", default-features = false, features = ["alloc"], optional = true }
# Serde's auto-derive supports `[T; N]` only up to N=32 in stable;
# UnlockRequest carries an Ed25519 sig as `[u8; 64]`. serde-big-array
# unblocks the larger sizes without us hand-rolling Deserialize.
serde-big-array = { version = "0.5", optional = true }
# Tappa 8 commit A2 (admin_signed_payload). All std-gated.
# ciborium: deterministic CBOR (RFC 8949) ser/de for SignedPayload.
ciborium = { version = "0.2", optional = true }
# sha2: SHA-512 for the signing digest. Same 0.10 the agent already
# uses for environment_hash; was previously dev-only here.
sha2 = { version = "0.10", optional = true }
# ed25519-dalek: signature primitives for sign/verify. Match the
# agent's exact feature shape so the workspace resolves one version.
ed25519-dalek = { version = "2", default-features = false, features = ["std"], optional = true }

[dev-dependencies]
serde_json = "1"
# (sha2 dev-dep removed — now a std-gated runtime dep above, still
# pinned at 0.10 to match the agent's environment_hash usage. The
# xai_types canonical_bytes byte-lock test uses it through the std
# feature path.)
